gcc/testsuite/gdc.test/fail_compilation/fail7702.d
struct S
{
   template opDispatch (string name) {}
}
void main()
{
    S s;
    s.x!int;
}
